# watch

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  config.rs  diff.rs  exec.rs  input.rs  interval.rs  lib.rs  main.rs  render.rs  screenshot.rs  terminal.rs
