[package]
name = "watch"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
crossterm = "0.29.0"
strip-ansi-escapes = "0.2.0"
unicode-width = "0.2.0"
chrono = { version = "0.4.38", default-features = true, features = ["clock", "std"] }
similar = "2.7.0"
